Designed the banner

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Class</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
-
+    <div id="site_body">
+        <div>
+            <ul>
+                <li>
+                    <a href="template1.html">Template 1</a>
+                </li>
+                <li>
+                    <a href="template2.html">template2</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
