--- a/template2.html
+++ b/template2.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 2</title>
+    <link rel="stylesheet" href="css/template2.css">
 </head>
 <body>
-    
+    <section id="topsection">
+        <header>
+
+        </header>
+
+        <div id="banner" class="container">
+            <aside>
+                <img src="images/bglady2.png" alt="Lady Image" id="banner_img">
+            </aside>
+            <aside>
+                <div>
+                    <h1>
+                        Finally, A Better Internet for your business.
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, impedit ducimus 
+                        exercitationem qui maxime temporibus eaque deleniti fuga asperiores natus vel iste 
+                        aspernatur nisi officia in laudantium! Laborum, perferendis magnam.
+                    </p>
+                    <div>
+                        <button id="btn_contact">
+                            Contact Us
+                        </button>
+                        <button id="btn_about">
+                            About Us
+                        </button>
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </section>
 </body>
 </html>
