--- a/template2.html
+++ b/template2.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="css/template2.css">
 </head>
 <body>
+    <!-- Top Section -->
     <section id="topsection">
+        <!-- Image Cover Start Here -->
+            <div id="bg_image_cover"> </div>
+        <!-- Image Cover Ends Here -->
         <header>
 
         </header>
@@ -36,6 +40,25 @@
                     </div>
                 </div>
             </aside>
+        </div>
+    </section>
+
+    <!-- Cards Section 1 -->
+    <section id="cards_sect_1">
+        <div id="card_grid1" class="container">
+            <aside>
+                <div class="icon_div">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
+                        <path opacity="1" fill="#1E3050" d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM288 96a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM256 416c35.3 0 64-28.7 64-64c0-17.4-6.9-33.1-18.1-44.6L366 161.7c5.3-12.1-.2-26.3-12.3-31.6s-26.3 .2-31.6 12.3L257.9 288c-.6 0-1.3 0-1.9 0c-35.3 0-64 28.7-64 64s28.7 64 64 64zM176 144a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM96 288a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm352-32a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"/>
+                    </svg>
+                </div>
+            </aside>
+
+            <aside>2</aside>
+
+            <aside>3</aside>
+
+            <aside>4</aside>
         </div>
     </section>
 </body>
